Bug #22011
abort in listing mapped nbd devices when running in a container
100%
Description
In some container scenarios, the file '/sys/block/nbd0/pid'
in the container records the host pid of the process
which opened the device, therefore the file '/proc/pid/cmdline'
corresponding to the pid in the container does not exist,
in that case, 'rbd-nbd list-mapped' will cause the
following assertion failure,
src/tools/rbd_nbd/rbd-nbd.cc: In function 'int get_mapped_info(int, Config*)'
/src/tools/rbd_nbd/rbd-nbd.cc: 834: FAILED assert(ifs.is_open())
ceph version 13.0.0-1632-gf9cfe84 (f9cfe84) mimic (dev)
1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x102) [0x7fc6b1054ba2]
2: (()+0x15c58) [0x560cd4697c58]
3: (main()+0x9) [0x560cd46937f9]
4: (__libc_start_main()+0xf0) [0x7fc6b003f830]
5: (_start()+0x29) [0x560cd46938f9]
NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.
Aborted (core dumped)
Related issues
History
#1 Updated by Jason Dillaman over 5 years ago
- Backport set to luminous,jewel
#2 Updated by Jason Dillaman about 5 years ago
- Status changed from Fix Under Review to Pending Backport
#3 Updated by Nathan Cutler about 5 years ago
- Copied to Backport #22185: luminous: abort in listing mapped nbd devices when running in a container added
#4 Updated by Nathan Cutler about 5 years ago
- Copied to Backport #22186: jewel: abort in listing mapped nbd devices when running in a container added
#5 Updated by Nathan Cutler about 5 years ago
- Status changed from Pending Backport to Resolved